--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -4,7 +4,15 @@ body {
     background: url('../img/background_plain.png');
 }
 
-.form-signin {
+.form-signin .form-error {
+    background-color: transparent;
+    font-size: 0.9em;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 8px;
+}
+
+.form-signin,
+.thank-you .form-signin{
     max-width: 400px;
     padding: 80px 29px 29px;
     margin: 0 auto 20px;
@@ -33,7 +41,8 @@ body {
     padding: 7px 9px;
 }
 
-.btn-landing{
+.btn-landing,
+.thank-you .btn-back{
     float: right;
     background-image: linear-gradient(to bottom, #D0000F, #8B3231);
     background-image: -moz-linear-gradient(top, #D0000F, #8B3231);
@@ -52,17 +61,43 @@ body {
 .btn-landing:active,
 .btn-landing.active,
 .btn-landing.disabled,
-.btn-landing[disabled] {
+.btn-landing[disabled],
+.thank-you .btn-back{
   color: #ffffff;
   background-color: #8B3231;
   *background-color: #D0000F;
 }
 
 .btn-landing:active,
-.btn-landing.active {
+.btn-landing.active,
+.thank-you .btn-back{
   background-color: #ffffff \9;
 }
 
-.btn-landing.active,
-  color: rgba(255, 255, 255, 0.75);
+.thank-you{
+    float: center;
+    padding: 80px 29px 29px;
+    font-size: 10em;
+    text-align: center;
+    color: #8B3231;
+}
+
+.thank-you .form-signin{
+    max-width: 400px;
+    padding: 40px 29px 10px;
+    margin: 0 auto 10px;
+    background-color: transparent;
+}
+
+.thank-you .title{
+    font-size: 40%;
+}
+
+.thank-you p{
+    font-size: 15%
+}
+
+.thank-you .btn-back{
+    float: left;
+    margin: 10px 0px 0px 0px;
 }
