--- a/templates/website/landing_page.html
+++ b/templates/website/landing_page.html
@@ -1,42 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>CANVAS - Viste tu lienzo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "layouts/base.html" %}
+{% block content %}
+<div class="container">
 
-    <!-- Le styles         background-color: #f5f5f5;-->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/landing.css" rel="stylesheet">
+  <form class="form-signin" action="{% url "landing" %}" method="post">
+    {% csrf_token %}
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
+    <img class="form-signin-heading" src="{{ STATIC_URL }}img/logo.png"></img>
+    <p>Canvas te ofrece un espacio para compartir tu creatividad. No sólo plasmando tus diseños en ropa para ti, sino abriéndolos a nuestra comunidad de usuarios. "¿Y qué gano yo con eso?", te preguntarás. ¡Déjanos tu e-mail y sé uno de los primeros en descubrirlo! (tip: no sólo es la fama (aunque también hay eso)).</p>
+    {% if form_error %}
+    <p class="form-error">{{ form_error }}</p>
+    {% endif %}
+    {{ form.email }}
+    <button class="btn btn-large btn-landing" type="submit">¡Enviar!</button>
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
-  </head>
+  </form>
 
-  <body>
-
-    <div class="container">
-      <form class="form-signin" action="{% url "landing" %}" method="post">
-	{% csrf_token %}
-        <img class="form-signin-heading" src="{{ STATIC_URL }}img/logo.png"></img>
-	<p>Canvas te ofrece un espacio para compartir tu creatividad. No sólo plasmando tus diseños en ropa para ti, sino abriéndolos a nuestra comunidad de usuarios. "¿Y qué gano yo con eso?", te preguntarás. ¡Déjanos tu e-mail y sé uno de los primeros en descubrirlo! (tip: no sólo es la fama (aunque también hay eso)).</p>
-	{{ form.email }}
-        <button class="btn btn-large btn-landing" type="submit">Enviar!</button>
-      </form>
-
-    </div> <!-- /container -->
-
-  </body>
-</html>
+</div> <!-- /container -->
+{% endblock %}
