--- a/templates/website/landing_page.html
+++ b/templates/website/landing_page.html
@@ -12,7 +12,11 @@
     {% endif %}
     {{ form.email }}
     <button class="btn btn-large btn-landing" type="submit">¡Enviar!</button>
-
+    <div class="separator"></div>
+    <div class="landing-footer">
+    <div class="fb-like" data-href="http://facebook.com/canvas.pe" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></div>
+<!-- <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a> -->
+    </div>
   </form>
 
 </div> <!-- /container -->
