Google analytics support

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,6 +45,16 @@
       fjs.parentNode.insertBefore(js,fjs);
       }
       }(document,"script","twitter-wjs");</script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-40243573-1', 'canvas-dev.co');
+      ga('send', 'pageview');
+    </script>
+
     {% block content %}{% endblock %}
   </body>
 </html>
