--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head>n
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="UxPuxh0hetd39bqwiwYi6ehMhxkK7fPpVy7P8aGHP54" />
     <title>CANVAS - Viste tu lienzo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:600' rel='stylesheet' type='text/css'>
     <!-- Le styles         background-color: #f5f5f5;-->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
