--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -2,7 +2,6 @@ body {
     padding-top: 0px;
     padding-bottom: 40px;
     background: url('../img/background_plain.png');
-    font-family: "Josefin Slab", serif;
 }
 
 .form-signin .form-error {
@@ -27,7 +26,7 @@ body {
     margin-bottom: 15px;
 //    width: 540px;
     color: #8B3231;
-    font-family: "Josefin Slab", serif;
+//    font-family: "Josefin Slab", serif;
     position: relative;
 //    left: -65px;
 }
