--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>n
+  <head>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="UxPuxh0hetd39bqwiwYi6ehMhxkK7fPpVy7P8aGHP54" />
     <title>CANVAS - Viste tu lienzo</title>
