Commented wideo bullshit

--- a/templates/website/landing_page.html
+++ b/templates/website/landing_page.html
@@ -7,7 +7,7 @@
 
     <img class="form-signin-heading" src="{{ STATIC_URL }}img/logo.png"></img>
     <h2>Viste tu lienzo</h2>
-    <iframe class="landing-video" width="540" height="310" src="http://www.wideo.co/embed/137761365387697363?height=282&width=500" frameborder="0" allowfullscreen ></iframe>
+<!-- <iframe class="landing-video" width="540" height="310" src="http://www.wideo.co/embed/137761365387697363?height=282&width=500" frameborder="0" allowfullscreen ></iframe> -->
     <div class="landing-description"><p>Canvas te ofrece un espacio para compartir tu creatividad. No sólo plasmando tus diseños en ropa para ti, sino abriéndolos a nuestra comunidad de usuarios. "¿Y qué gano yo con eso?", te preguntarás. ¡Déjanos tu e-mail y sé uno de los primeros en descubrirlo! (tip: no sólo es la fama (aunque también hay eso)).</p></div>
     {% if form_error %}
     <p class="form-error">{{ form_error }}</p>
