--- a/Template/index.html
+++ b/Template/index.html
@@ -68,18 +68,43 @@
           
             <div class="header-description">
               <h2>Viste tu Lienzo!</h2>
+			  
+			  <div class="container">
+				<div class="row-fluid">
+				  <div class="span12">
+				  
+					<div id="slider-carousel" class="carousel slide">
+					  <div class="carousel-inner">
+						<div class="item active">
+						  <img src="img/macbook-air-3.png" alt="">
+						</div>
+						<div class="item">
+						  <img src="img/macbook-air-1.png" alt="">
+						</div>
+						<div class="item">
+						  <img src="img/macbook-air-2.png" alt="">
+						</div>
+					  </div>
+					  <a class="carousel-control left" href="#slider-carousel" data-slide="prev">&lsaquo;</a>
+					  <a class="carousel-control right" href="#slider-carousel" data-slide="next">&rsaquo;</a>
+					</div><!-- /slider-carousel -->
+					
+				  </div><!-- /span12 -->
+				</div><!-- /row-fluid -->
+			  </div><!-- /container -->
+			  
               <a class="header-btn" href="#">Ingresa Ahora</a>
             </div><!-- /header-description -->
             
             <div class="header-features">
               <div class="row-fluid">
                 <div class="span6 header-feature">
-                  <h3><i class="icon-random"></i> &nbsp Crea tu moda</h3>
-                  <p>Proin ut iaculis nisl. Nulla dignissim neque magna, id hendrerit metus. Mauris non turpis eu arcu volutpat cursus. Etiam hendrerit erat ac eros auctor at eleifend lacus tincidunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eu dignissim risus.</p>
+                  <h3><i class="icon-random"></i> &nbsp Comparte con tus amigos</h3>
+                  <p> Comparte tus diseños con tus amigos, gracias a las redes sociales, podrás estar al pendiente de los diseños de tus autores favoritos, así como ellos de ti.</p>
                 </div>
                 <div class="span6 header-feature">
-                  <h3> <i class="icon-group"></i> &nbsp Desarrolla tu estilo</h3>
-                  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In hac habitasse platea dictumst. Nulla et porta nunc. Duis volutpat tristique nisl ac adipiscing. Sed eget nibh sit amet enim faucibus porta.</p>
+                  <h3> <i class="icon-group"></i> &nbsp Gana Popularidad</h3>
+                  <p> Lograras con tus diseños ganar popularidad, entre más popular seas, más posibilidades de  ganar dinero tendrás.</p>
                 </div>
               </div>
             </div><!-- /header-features -->
@@ -93,42 +118,16 @@
       <div class="container">
         <div class="row-fluid">
           <div class="span12">
-            <p>Registrate ahora no pierdas tu tiempo!</p>
+            <p>¡Suscribete ahora mismo!</p>
             <form id="subsc-form">
               <div class="input-append">
-                <input id="appendedInputButton" type="email" name="subscriber" placeholder="your email" required />
+                <input id="appendedInputButton" type="email" name="subscriber" placeholder="Tú Email" required />
                 <button type="submit" class="btn-custom" >Suscribete</button>
               </div>
             </form>
           </div>
         </div>
       </div>
-    </section>
-	
-    <section id="slider" class="slider text-center">
-      <div class="container">
-        <div class="row-fluid">
-          <div class="span12">
-          
-            <div id="slider-carousel" class="carousel slide">
-              <div class="carousel-inner">
-                <div class="item active">
-                  <img src="img/macbook-air-3.png" alt="">
-                </div>
-                <div class="item">
-                  <img src="img/macbook-air-1.png" alt="">
-                </div>
-                <div class="item">
-                  <img src="img/macbook-air-2.png" alt="">
-                </div>
-              </div>
-              <a class="carousel-control left" href="#slider-carousel" data-slide="prev">&lsaquo;</a>
-              <a class="carousel-control right" href="#slider-carousel" data-slide="next">&rsaquo;</a>
-            </div><!-- /slider-carousel -->
-            
-          </div><!-- /span12 -->
-        </div><!-- /row-fluid -->
-      </div><!-- /container -->
     </section>
 	   
     <section id="features" class="features">
@@ -138,32 +137,32 @@
           <div class="span3">
             <div class="feature">
               <i class="icon-globe icon-2x pull-left"></i>
-              <h4>Used by Millions</h4>
-              <p>Curabitur fringilla, elit pulvinar auctor tincidunt, arcu nibh adipiscing velit, at tincidunt libero nisl sit amet nisl.</p>
+              <h4>Comparte con todo el mundo</h4>
+              <p>Gracias a las redes sociales, podrás estar al pendiente de los diseños de tus autores favoritos, así como ellos de ti.</p>
             </div>
           </div><!-- /span3 -->
           
           <div class="span3">
             <div class="feature">
               <i class="icon-wrench icon-2x pull-left"></i>
-              <h4>Developers Friendly</h4>
-              <p>Nullam ac magna sit amet Justo eu vulputate fermentum.</p>
+              <h4>Desarrolla tus diseños </h4>
+              <p>Lograrás con tus diseños ganar popularidad, entre más popular seas, más posibilidades de  ganar dinero.</p>
             </div>
           </div><!-- /span3 -->
           
           <div class="span3">
             <div class="feature">
-              <i class="icon-desktop icon-2x pull-left"></i>
-              <h4>Responsive</h4>
-              <p>From desktop tto mobile. Dignissim et dolor. Proin facilisis nulla vitae dui luctus ac pulvinar magna tincidunt.</p>
+              
+              <h4><img src="img/polo-icon.png" alt="">&nbsp; Crea moda</h4>
+              <p>Plasma tus creaciones en ropa, accesorios y otros. Bajos precios y calidad asegurada.</p>
             </div>
           </div><!-- /span3 -->
           
           <div class="span3">
             <div class="feature">
               <i class="icon-thumbs-up icon-2x pull-left"></i>
-              <h4>Flat Design</h4>
-              <p>keeping up with trends, can impact your success. Integer.</p>
+              <h4>Fácil de compartir</h4>
+              <p>Conectividad con todas las redes sociales, Facebook, Twitter, Google+ y más…</p>
             </div>
           </div><!-- /span3 -->
           
