--- a/templates/website/landing_page.html
+++ b/templates/website/landing_page.html
@@ -1,30 +1,126 @@
 {% extends "layouts/base.html" %}
 {% block content %}
-<div class="container">
+<header id="header" class="site-header">
+    <div class="row-fluid">
+      <div class="span12">
 
-  <form class="form-signin" action="{% url "landing" %}" method="post">
-    {% csrf_token %}
+        <div class="header-description">
 
-    <img class="form-signin-heading" src="{{ STATIC_URL }}img/logo.png"></img>
-    <h2>Viste tu lienzo</h2>
-<!-- <iframe class="landing-video" width="540" height="310" src="http://www.wideo.co/embed/137761365387697363?height=282&width=500" frameborder="0" allowfullscreen ></iframe> -->
-    <div class="landing-description"><p>Canvas te ofrece un espacio para compartir tu creatividad. No sólo plasmando tus diseños en ropa para ti, sino abriéndolos a nuestra comunidad de usuarios. "¿Y qué gano yo con eso?", te preguntarás. ¡Déjanos tu e-mail y sé uno de los primeros en descubrirlo! (tip: no sólo es la fama (aunque también hay eso)).</p></div>
-    {% if form_error %}
-    <p class="form-error">{{ form_error }}</p>
-    {% endif %}
-    <div class="gay">
-      <div class="input-append">
-	{{ form.email }}
-	<!--       <button class="btn btn-large btn-landing" type="submit">¡Enviar!</button>  -->
-	<button class="btn btn-landing" type="submit">¡Enviar!</button>
+          <div class="container">
+            <div class="row-fluid">
+              <div class="span12">
+
+                <div id="slider-carousel" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="item active">
+                      <img src="{{ STATIC_URL}}img/carousel3-blurred.jpg" alt="">
+                      <div class="container">
+                        <div class="carousel-caption">
+                          <h1><i class="icon-share"></i> &nbsp Un espacio para compartir</h1>
+                          <p class="lead">Tus diseños forman parte de nuestra galería, en donde pueden ser descubiertos por personas como tú.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ STATIC_URL}}img/carousel1-blurred.jpg" alt="">
+                      <div class="container">
+                        <div class="carousel-caption">
+                          <h1> <i class="icon-pencil"></i> &nbsp Un espacio para crear</h1>
+                          <p class="lead">Nosotros ponemos el lienzo, tú pones la creatividad.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="{{ STATIC_URL}}img/carousel5-blurred.jpg" alt="">
+                      <div class="container">
+                        <div class="carousel-caption">
+                          <h1> <i class="icon-search"></i> &nbsp Un espacio para descubrir</h1>
+                          <p class="lead">Tenemos tantos creadores como usuarios. Cada día te sorprenderás con los diseños nuevos que encuentres.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <iframe width="576" height="431" src="http://www.youtube.com/embed/xl4fEaaNMuc?rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                  </div>
+                  <a class="carousel-control left" href="#slider-carousel" data-slide="prev">&lsaquo;</a>
+                  <a class="carousel-control right" href="#slider-carousel" data-slide="next">&rsaquo;</a>
+                </div><!-- /slider-carousel -->
+
+              </div><!-- /span12 -->
+            </div><!-- /row-fluid -->
+          </div><!-- /container -->
+
+        </div><!-- /header-description -->
+
+      </div><!-- /span12 -->
+    </div><!-- /row-fluid -->
+  </div><!-- /container -->
+</header>
+
+<section id="subscribe" class="subscribe">
+  <div class="container">
+    <div class="row-fluid">
+      <div class="span12">
+        <p>Déjanos tu e-mail y sé el primero en enterarte de lo que se viene</p>
+        <form id="subsc-form" action="{% url "landing" %}" method="post">
+          {% csrf_token %}
+          {{ form.email.errors.0 }}
+          <div class="input-append">
+            <input id="appendedInputButton" id="id_email" name="email" type="text" name="subscriber" placeholder="Tu e-mail" required />
+            <button type="submit" class="btn-custom" >Suscríbete</button>
+          </div>
+        </form>
       </div>
     </div>
-    <div class="separator"></div>
-    <div class="landing-footer">
-    <div class="fb-like" data-href="http://facebook.com/canvas.pe" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></div>
-    <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a> -->
-    </div>
-  </form>
+  </div>
+</section>
 
-</div> <!-- /container -->
+<section id="features" class="features">
+  <div class="container">
+    <div class="row-fluid">
+
+      <div class="span3">
+        <div class="feature">
+          <div class="feature-title">
+            <i class="icon-pencil icon-2x pull-left"></i>
+            <h4>Diseña</h4>
+          </div>
+          <p>Da rienda suelta a tu imaginación. Cuéntanos cómo quieres que sea tu obra maestra y nosotros te la entregamos, ¡lista para que la uses!.</p>
+        </div>
+      </div><!-- /span3 -->
+
+      <div class="span3">
+        <div class="feature">
+          <div class="feature-title">
+            <i class="icon-share icon-2x pull-left"></i>
+            <h4>Comparte</h4>
+          </div>
+          <p>Una vez que termines de diseñar, publica tu diseño en nuestra comunidad. Recibe comentarios y valoraciones sobre tus ideas.</p>
+        </div>
+      </div><!-- /span3 -->
+
+      <div class="span3">
+        <div class="feature">
+          <div class="feature-title">
+            <i class="icon-search icon-2x pull-left"></i>
+            <h4>Descubre</h4>
+          </div>
+          <p>Recibe recomendaciones de diseños basadas en tus gustos. Si compras alguno, compartiremos las ganancias con su creador.</p>
+        </div>
+      </div><!-- /span3 -->
+
+      <div class="span3">
+        <div class="feature">
+          <div class="feature-title">
+            <i class="icon-thumbs-up icon-2x pull-left"></i>
+            <h4>¡Sigue compartiendo!</h4>
+          </div>
+          <p>Ayuda a que tus diseños favoritos se hagan virales compartiendo en Facebook, Twitter, Pinterest, Google+ y más.</p>
+        </div>
+      </div><!-- /span3 -->
+
+    </div><!-- /row-fluid -->
+  </div><!-- /container -->
+</section>
 {% endblock %}
