--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,40 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="google-site-verification" content="UxPuxh0hetd39bqwiwYi6ehMhxkK7fPpVy7P8aGHP54" />
-    <title>CANVAS - Viste tu lienzo</title>
+    <title>Canvas - Viste tu lienzo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Beaker - Responsive Landing Page">
+    <meta name="author" content="Shy Markets">
 
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:600' rel='stylesheet' type='text/css'>
-    <!-- Le styles         background-color: #f5f5f5;-->
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Le styles -->
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/landing.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css"> <!-- main stylesheet (change this to modify template) -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style-responsive.css"> <!-- main stylesheet (responsive) -->
+
+    <style type="text/css" media="screen">
+      #custom-tweet-button a{
+      }
+      #custom-tweet-button a img{
+      }
+    </style>
+
+    <!--[if IE 7]>
+      <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome-ie7.css" rel="stylesheet">
+    <![endif]-->
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
+      <script type="text/javascript" src="//cdn.jsdelivr.net/html5shiv/3.6.1/html5shiv.min.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="../assets/ico/favicon.png">
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-40485554-1', 'canvas.pe');
-      ga('send', 'pageview');
-    </script>
-   {% block head %}{% endblock %}
   </head>
 
   <body>
@@ -57,6 +52,51 @@
       fjs.parentNode.insertBefore(js,fjs);
       }
       }(document,"script","twitter-wjs");</script>
+
+    <div id="top">
+      <div class="container">
+        <div class="row">
+          <div class="span12">
+            <div id="logo"><h1><a href="./">Canvas<span class="colored">.</span></a></h1></div>
+            <div id="social">
+              <ul>
+                <li><a href="http://www.facebook.com/canvas.pe" target="_blank"><img src="{{ STATIC_URL }}img/icons/facebook.png" alt="Facebook"></a></li>
+              </ul>
+            </div>
+            <div id="spade">
+              <a href="#" title="Show/hide header"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     {% block content %}{% endblock %}
+
+    <footer id="footer" class="footer">
+      <div class="container">
+        <div class="row-fluid">
+          <div class="span12">
+            <div class="fb-like" data-href="http://facebook.com/canvas.pe" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></div>
+            <div>
+              <h1 class="footer-title pull-right"><a href="#">Viste tu lienzo.</a></h1>
+              <p class="pull-right copyright">
+                &copy Canvas 2013. Todos los derechos reservados.
+              </p>
+            </div> 
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Le javascript
+         ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/gmaps/0.3.1/gmaps.min.js"></script>
+    <script src="js/script.js"></script>
+
   </body>
 </html>
