--- a/final_template/css/style.css
+++ b/final_template/css/style.css
@@ -12,7 +12,7 @@ Tags: fluid, grid, blog, magazine, imbalance
 
 html, body, form, ul, li, table, td { margin: 0; padding: 0; }
 body { position: relative; color: #333; }
-body, input, textarea { font-size: 13px; }
+body, textarea { font-weight:bold; }
 a { text-decoration: none; }
 a:hover { text-decoration: underline; }
 a img { border: 0; }
@@ -23,10 +23,11 @@ h2 { font-size: 18px; }
 h3 { font-size: 12px; }
 blockquote { border-left-width: 3px; border-left-style: solid; margin-left: 7px; padding-left: 20px; font-size: 16px; color: #636363; }
 .clear { clear: both; }
+.clear1 { clear: both; height: 15px;}
 .main_separator { color: #dedfe0; }
 .wrapper { padding-top: 31px; }
 #header { border-bottom: 1px solid #dedfe0; padding-bottom: 50px; }
-#site-title { float: left; width: 210px; padding-right: 40px; overflow: hidden; line-height: 27px; font-size: 23px; }
+#site-title { float: left; width: 410px; padding-right: 40px; overflow: hidden; line-height: 27px; font-size: 23px; }
 #site-title a { color: #333; font-weight: bold; text-decoration: none; }
 #header-left { float: left; width: 210px; padding-right: 40px; }
 #header-center { float: left; width: 210px; padding-right: 30px; }
@@ -34,6 +35,40 @@ blockquote { border-left-width: 3px; border-left-style: solid; margin-left: 7px;
 #header-right { margin: 20px 0 0 10px; }
 #search label, #search input[type=submit] { display: none; }
 #search input[type=text] { width: 200px; padding: 7px 9px; margin: 0; border: 1px solid #dedfe0; background: #fff; font-size: 13px; outline: none; }
+
+#registro { text-align: center;  }
+#registro input[type=submit] { width: 320px; }
+#registro input[type=text] { width: 300px; padding: 7px 9px; margin: 0; border: 1px solid #dedfe0; background: #fff; font-size: 13px; outline: none; }
+
+#subir { text-align: center;  }
+#subir input[type=submit] { width: 320px; }
+#subir input[type=text] { width: 300px; padding: 7px 9px; margin: 0; border: 1px solid #dedfe0; background: #fff; font-size: 13px; outline: none; }
+#subir input[type=file] {  
+
+    display: inline-block;
+    color: rgb(219, 82, 47);
+    text-align: center;
+    
+    vertical-align: middle;
+    cursor: pointer;
+
+    border: 2px solid rgb(219, 82, 47);
+    width: 315px;
+    
+    -webkit-border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-top-right-radius: 5px;
+    -moz-border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+    -ms-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+ }
+
 #page_search input[type=submit] { display: none; }
 .menu ul { list-style-type: none; }
 .menu ul li { padding-bottom: 9px; }
@@ -114,52 +149,3 @@ input[type="text"], textarea { background: #fff; border: 1px solid #ccc; padding
 #infscr-loading { background: none repeat scroll 0 0 #000000; bottom: 40px; color: #FFFFFF; height: 100px; left: 40%; opacity: 0.8; padding: 10px; position: fixed; width: 200px; z-index: 5000; border-radius: 10px; }
 
 
-    .myButton {
-        
-        -moz-box-shadow: 0px 1px 0px 0px #fff6af;
-        -webkit-box-shadow: 0px 1px 0px 0px #fff6af;
-        box-shadow: 0px 1px 0px 0px #fff6af;
-        
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffec64), color-stop(1, #ffab23));
-        background:-moz-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-        background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-        background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-        background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-        background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
-        
-        background-color:#ffec64;
-        
-        -moz-border-radius:6px;
-        -webkit-border-radius:6px;
-        border-radius:6px;
-        
-        border:1px solid #db4141;
-        
-        display:inline-block;
-        color:#333333;
-        font-family:Arial;
-        font-size:15px;
-        font-weight:bold;
-        padding:6px 24px;
-        text-decoration:none;
-        margin-bottom: 20px;
-        text-shadow:0px 1px 0px #ffee66;
-        
-    }
-    .myButton:hover {
-        
-        background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffab23), color-stop(1, #ffec64));
-        background:-moz-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-        background:-webkit-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-        background:-o-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-        background:-ms-linear-gradient(top, #ffab23 5%, #ffec64 100%);
-        background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
-        
-        background-color:#ffab23;
-    }
-    .myButton:active {
-        position:relative;
-        top:1px;
-    }
